--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
 </head>
 
 <body>
-  <div>
-    <label for="email-person">Email</label>
-    <input type="email" id="email-person">
-  </div>
-  <div>
-    <label for="pass">Password</label>
-    <input type="password" id="pass">
-  </div>
-  <a href="./Pages/Home.html">Login</a>
+  <a href="./Pages/Home.html" style="text-align: center;margin: 5rem auto;">Start Project</a>
 </body>
 
 </html>
