--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Start Peoject</title>
 </head>
 
 <body>
+    <div>
+        <label for="email">email</label>
+        <input type="email" name="email" id="email">
+    </div>
     <a href="./Pages/Home.html">Start Project</a>
 </body>
 
