submit_login_Design

--- a/index.html
+++ b/index.html
@@ -2,17 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start Peoject</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - Tiny Fashionista</title>
+  <link rel="stylesheet" href="./StyleSheets(css)/main.css">
 </head>
 
 <body>
-    <div>
-        <label for="email">email</label>
-        <input type="email" name="email" id="email">
+  <main class="login">
+    <div class="photoForLogin">
+      <img src="./images/photo for login page.jpg" alt="image">
     </div>
-    <a href="./Pages/Home.html">Start Project</a>
+    <div class="formLogin">
+      <h1 class="title">Welcome To Tiny Fashionista</h1>
+      <div>
+        <input type="email" name="email" placeholder="Email">
+        <input type="password" placeholder="Password">
+        <a href="./Pages/Home.html" class="loginLink">login</a>
+      </div>
+      <div>
+        <h2> <a href="#">Lost your password?!</a></h2>
+      </div>
+    </div>
+  </main>
+
 </body>
 
 </html>
