--- a/Pages/contactUs.html
+++ b/Pages/contactUs.html
@@ -49,11 +49,11 @@
           <label for="email">email</label>
           <input type="email" id="email" name="email">
         </div>
-          <div class="groub-input">
-            <label for="message">Message</label>
-            <textarea name="feedback" id="message" name="message"></textarea>
-          </div>
-          <input type="submit" value="Send Now" class="submit">
+        <div class="groub-input">
+          <label for="message">Message</label>
+          <textarea id="message" name="message"></textarea>
+        </div>
+        <input type="submit" value="Send Now" class="submit">
       </form>
     </div>
     <span id="checkForm"></span>
